# zenoh-buffer-size

./: Cargo.toml  plot.py  run.sh
logs/: 1024.txt  1024000.txt  128.txt  128000.txt  16.txt  16384.txt  2048.txt  2048000.txt  256.txt  256000.txt  32.txt  32768.txt  4096.txt  4096000.txt  512.txt  512000.txt  64.txt  65500.txt  8.txt  8192.txt
plots/: throughput-comparison.html
