[package]
name = "zenoh-buffer-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", rev = "f65a24c710730c88931ed8f40ea827f02f3144a9" }
